# impulse

./: .gitignore  README.md  ballchasing.py  impulse_db.py  main.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  rate_limiter.py  rlcs_downloader.py  s3.py  sa_features.py  test_bc_download.py  test_bc_s3_integration.py  test_s3_manager.py
.github/workflows/: docs.yml
collection/api-reference/: index.html
collection/downloading/: index.html
collection/overview/: index.html
collection/rlcs/: index.html
configuration/: index.html
impulse/: __init__.py  replay_dataset.py
impulse/analysis/: 01_eda_dataset.ipynb  __init__.py  ball_path_prediction.ipynb  data_loader.py  eda.py  eda_kickoff_states.ipynb  kickoff_setup_detection.py
impulse/collection/: __init__.py  ballchasing.py  ballchasing_client.py  database.py  rate_limiter.py  replay_downloader.py  rlcs_manager.py  s3_manager.py  storage.py  utils.py
impulse/config/: __init__.py  collection_config.py  feature_config.py  parsing_config.py  pipeline_config.py
impulse/notebooks/: replay_viewer.ipynb
impulse/parsing/: __init__.py  parse_result_formatter.py  parsing_pipeline.py  prototype_parse_replay.py  sa_features.py  (+2 more)
scripts/: backfill_replay_metadata.py  backfill_segment_boundaries.py  download_group.py  download_rlcs_season.py  migrate_raw_replays_v2.py  parse_all_unparsed.py  pull_db.py  push_db.py  rlcs_downloader.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
tests/: conftest.py  test_bc_download.py  test_bc_s3_integration.py  test_s3_manager.py  test_smoke.py
(+22 files in other folders)
