[project]
name = "impulse"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.9",
    "ipympl>=0.10.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "requests-ratelimiter>=0.9.1",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "subtr-actor-py>=0.1.10",
]

[dependency-groups]
dev = [
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.7.2",
    "mkdocstrings[python]>=1.0.3",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "responses>=0.25.8",
    "ruff>=0.15.2",
]
